--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hiroshima",
   "version": "2.0.0",
   "description": "Opinionated routing library",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "eslint . && mocha",
     "prepublish": "gulp"
