--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mocha": "^2.3.2"
   },
   "dependencies": {
-    "babel-runtime": "^5.8.20"
+    "babel-runtime": "^5.8.20",
+    "lodash": "^3.10.1"
   }
 }
